syntax = "proto3";

package opendut.carl.services.cluster_manager;

import "opendut/types/cluster/cluster.proto";
import "opendut/types/peer/peer.proto";
import "opendut/types/peer/state.proto";

service ClusterManager {
  rpc CreateClusterDescriptor(CreateClusterDescriptorRequest) returns (CreateClusterDescriptorResponse) {}
  rpc DeleteClusterDescriptor(DeleteClusterDescriptorRequest) returns (DeleteClusterDescriptorResponse) {}
  rpc GetClusterDescriptor(GetClusterDescriptorRequest) returns (GetClusterDescriptorResponse) {}
  rpc ListClusterDescriptors(ListClusterDescriptorsRequest) returns (ListClusterDescriptorsResponse) {}

  rpc StoreClusterDeployment(StoreClusterDeploymentRequest) returns (StoreClusterDeploymentResponse) {}
  rpc DeleteClusterDeployment(DeleteClusterDeploymentRequest) returns (DeleteClusterDeploymentResponse) {}
  rpc GetClusterDeployment(GetClusterDeploymentRequest) returns (GetClusterDeploymentResponse) {}
  rpc ListClusterDeployments(ListClusterDeploymentsRequest) returns (ListClusterDeploymentsResponse) {}

  rpc ListClusterPeerStates(ListClusterPeerStatesRequest) returns (ListClusterPeerStatesResponse) {}
}

//
// CreateClusterDescriptor
//
message CreateClusterDescriptorRequest {
  opendut.types.cluster.ClusterDescriptor cluster_descriptor = 1;
}

message CreateClusterDescriptorResponse {
  oneof reply {
    CreateClusterDescriptorFailure failure = 1;
    CreateClusterDescriptorSuccess success = 2;
  }
}

message CreateClusterDescriptorSuccess {
  opendut.types.cluster.ClusterId cluster_id = 1;
}

message CreateClusterDescriptorFailure {
  oneof error {
    CreateClusterDescriptorFailureInternal internal = 2;
  }
}

message CreateClusterDescriptorFailureInternal {
  opendut.types.cluster.ClusterId cluster_id = 1;
  opendut.types.cluster.ClusterName cluster_name = 2;
  string cause = 3;
}

//
// DeleteClusterDescriptor
//
message DeleteClusterDescriptorRequest {
  opendut.types.cluster.ClusterId cluster_id = 1;
}

message DeleteClusterDescriptorResponse {
  oneof reply {
    DeleteClusterDescriptorSuccess success = 1;
    DeleteClusterDescriptorFailure failure = 2;
  }
}

message DeleteClusterDescriptorSuccess {
  opendut.types.cluster.ClusterDescriptor cluster_descriptor = 1;
}

message DeleteClusterDescriptorFailure {
  oneof error {
    DeleteClusterDescriptorFailureClusterDescriptorNotFound cluster_descriptor_not_found = 1;
    DeleteClusterDescriptorFailureIllegalClusterState illegal_cluster_state = 2;
    DeleteClusterDescriptorFailureInternal internal = 3;
    DeleteClusterDescriptorFailureClusterDeploymentExists cluster_deployment_exists = 4;
  }
}

message DeleteClusterDescriptorFailureClusterDescriptorNotFound {
  opendut.types.cluster.ClusterId cluster_id = 1;
}

message DeleteClusterDescriptorFailureIllegalClusterState {
  opendut.types.cluster.ClusterId cluster_id = 1;
  opendut.types.cluster.ClusterName cluster_name = 2;
  opendut.types.cluster.ClusterState actual_state = 3;
  repeated opendut.types.cluster.ClusterState required_states = 4;
}

message DeleteClusterDescriptorFailureInternal {
  opendut.types.cluster.ClusterId cluster_id = 1;
  optional opendut.types.cluster.ClusterName cluster_name = 2;
  string cause = 3;
}

message DeleteClusterDescriptorFailureClusterDeploymentExists {
  opendut.types.cluster.ClusterId cluster_id = 1;
}

//
// GetClusterDescriptor
//
message GetClusterDescriptorRequest {
  opendut.types.cluster.ClusterId id = 1;
}

message GetClusterDescriptorResponse {
  oneof result {
    GetClusterDescriptorFailure failure = 1;
    GetClusterDescriptorSuccess success = 15;
  }
}

message GetClusterDescriptorSuccess {
  opendut.types.cluster.ClusterDescriptor configuration = 1;
}

message GetClusterDescriptorFailure {}

//
// ListClusterDescriptors
//
message ListClusterDescriptorsRequest {}

message ListClusterDescriptorsResponse {
  oneof result {
    ListClusterDescriptorsFailure failure = 1;
    ListClusterDescriptorsSuccess success = 15;
  }
}

message ListClusterDescriptorsSuccess {
  repeated opendut.types.cluster.ClusterDescriptor configurations = 1;
}

message ListClusterDescriptorsFailure {}

//
// StoreClusterDeployment
//
message StoreClusterDeploymentRequest {
  opendut.types.cluster.ClusterDeployment cluster_deployment = 1;
}

message StoreClusterDeploymentResponse {
  oneof reply {
    StoreClusterDeploymentFailure failure = 1;
    StoreClusterDeploymentSuccess success = 15;
  }
}

message StoreClusterDeploymentSuccess {
  opendut.types.cluster.ClusterId cluster_id = 1;
}

message StoreClusterDeploymentFailure {
  oneof error {
    StoreClusterDeploymentFailureInternal internal = 2;
    StoreClusterDeploymentFailureIllegalPeerState illegal_peer_state = 3;
  }
}

message StoreClusterDeploymentFailureInternal {
  opendut.types.cluster.ClusterId cluster_id = 1;
  optional opendut.types.cluster.ClusterName cluster_name = 2;
  string cause = 3;
}

message StoreClusterDeploymentFailureIllegalPeerState {
  opendut.types.cluster.ClusterId cluster_id = 1;
  opendut.types.cluster.ClusterName cluster_name = 2;
  repeated opendut.types.peer.PeerId invalid_peers = 3;
}

//
// DeleteClusterDeployment
//
message DeleteClusterDeploymentRequest {
  opendut.types.cluster.ClusterId cluster_id = 1;
}

message DeleteClusterDeploymentResponse {
  oneof reply {
    DeleteClusterDeploymentFailure failure = 1;
    DeleteClusterDeploymentSuccess success = 15;
  }
}

message DeleteClusterDeploymentSuccess {
  opendut.types.cluster.ClusterDeployment cluster_deployment = 1;
}

message DeleteClusterDeploymentFailure {
  oneof error {
    DeleteClusterDeploymentFailureClusterDeploymentNotFound cluster_deployment_not_found = 1;
    DeleteClusterDeploymentFailureIllegalClusterState illegal_cluster_state = 2;
    DeleteClusterDeploymentFailureInternal internal = 3;
  }
}

message DeleteClusterDeploymentFailureClusterDeploymentNotFound {
  opendut.types.cluster.ClusterId cluster_id = 1;
}

message DeleteClusterDeploymentFailureIllegalClusterState {
  opendut.types.cluster.ClusterId cluster_id = 1;
  opendut.types.cluster.ClusterName cluster_name = 2;
  opendut.types.cluster.ClusterState actual_state = 3;
  repeated opendut.types.cluster.ClusterState required_states = 4;
}

message DeleteClusterDeploymentFailureInternal {
  opendut.types.cluster.ClusterId cluster_id = 1;
  opendut.types.cluster.ClusterName cluster_name = 2;
  string cause = 3;
}

//
// GetClusterDeployment
//
message GetClusterDeploymentRequest {
  opendut.types.cluster.ClusterId id = 1;
}

message GetClusterDeploymentResponse {
  oneof result {
    GetClusterDeploymentFailure failure = 1;
    GetClusterDeploymentSuccess success = 15;
  }
}

message GetClusterDeploymentSuccess {
  optional opendut.types.cluster.ClusterDeployment deployment = 1;
}

message GetClusterDeploymentFailure {}


//
// ListClusterDeployments
//
message ListClusterDeploymentsRequest {}

message ListClusterDeploymentsResponse {
  oneof result {
    ListClusterDeploymentsFailure failure = 1;
    ListClusterDeploymentsSuccess success = 15;
  }
}

message ListClusterDeploymentsSuccess {
  repeated opendut.types.cluster.ClusterDeployment deployments = 1;
}

message ListClusterDeploymentsFailure {}


//
// ListClusterPeerStates
//
message ListClusterPeerStatesRequest {
  opendut.types.cluster.ClusterId cluster_id = 1;
}

message ListClusterPeerStatesResponse {
  oneof result {
    ListClusterPeerStatesFailure failure = 1;
    ListClusterPeerStatesSuccess success = 2;
  }
}

message ListClusterPeerStatesSuccess {
  map<string, opendut.types.peer.PeerState> peer_states = 1;
}

message ListClusterPeerStatesFailure {
  string cause = 1;
}
